<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">硬件检测</string>
    <string name="text_btn_back_camara">主摄像头​​​​​​​</string>
    <string name="text_btn_front_camara">副摄像头​​​​​​​​​​​​</string>
    <string name="text_btn_gps">GPS</string>
    <string name="text_btn_wifi">Wifi</string>
    <string name="text_btn_bluetooth">蓝牙​​​​​​​</string>
    <string name="text_btn_gsm">GSM / UMTS</string>
    <string name="text_btn_compass">指南针​​​​</string>
    <string name="text_btn_baseband">基带​​​</string>
    <string name="text_btn_screen">屏幕坏点​​​​</string>
    <string name="text_btn_display">屏幕信息</string>
    <string name="text_btn_battery">电池​​​​</string>
    <string name="text_btn_cpu">CPU</string>
    <string name="text_btn_altavoz">聲音</string>
    <string name="text_btn_vibrator">振动器​​​​​</string>
    <string name="text_btn_microphone">话筒​​​​​​​​</string>
    <string name="text_btn_usb">USB</string>
    
    <string name="text_btn_audio_video">音频和视频输出​​​​​​​​​​​​​​</string>
    <string name="text_btn_android_os">Android 系统</string>
    <string name="text_btn_light_sensor">光线传感器​​​​​​​​</string>
    <string name="text_btn_gravity">重力传感器</string>
    <string name="text_btn_orientation">方向传感器​​​​​​​​​​​​​</string>
    <string name="text_btn_gyroscope">陀螺仪传感器</string>
    <string name="text_btn_rotation">旋转矢量传感器</string>
    <string name="text_btn_speed_accelerate">加速度传感器</string>
    <string name="text_btn_linear_accelerate">线性加速传感器</string>
    <string name="text_btn_nfc">NFC</string>
    <string name="text_btn_flash">Flash</string>
    <string name="text_btn_pressure">压力感应</string>
    <string name="text_btn_temperature">温度传感器</string>
    <string name="text_btn_humidity">湿度传感器</string>
    <string name="text_btn_proximity">距离传感器</string>
    <string name="click_screen_vibrator">点击屏幕测试振动</string>
    
    <string name="gravity_x">重力感应X:</string>
    <string name="gravity_y">重力感应Y:</string>
    <string name="gravity_z">重力感应Z:</string>
    <string name="gravity_accuracy">精度:</string>
    <string name="gravity_name">名称:</string>
    <string name="gravity_company">厂商:</string>
    <string name="gravity_sample_rate">采样率:</string>
    <string name="gravity_version">版本:</string>
    <string name="gravity_power">功率:</string>
    <string name="gravity_max_range">最大范围:</string>
    <string name="gravity_resolution">分辨率:</string>
    
    <string name="compass_x">磁场X:</string>
    <string name="compass_y">磁场Y:</string>
    <string name="compass_z">磁场Z:</string>
    <string name="compass_accuracy">精度:</string>
    <string name="compass_name">名称:</string>
    <string name="compass_company">厂商:</string>
    <string name="compass_version">版本:</string>
    <string name="compass_power">功率:</string>
    <string name="compass_max_range">最大范围:</string>
    <string name="compass_resolution">分辨率:</string>
    
    <string name="gyroscope_x">旋转度X</string>
    <string name="gyroscope_y">旋转度Y</string>
    <string name="gyroscope_z">旋转度Z</string>
    <string name="gyroscope_accuracy">精度:</string>
    <string name="gyroscope_name">名称:</string>
    <string name="gyroscope_company">厂商:</string>
    <string name="gyroscope_sample_rate">采样率:</string>
    <string name="gyroscope_version">版本:</string>
    <string name="gyroscope_power">功率:</string>
    <string name="gyroscope_max_range">最大范围:</string>
    <string name="gyroscope_resolution">分辨率:</string>
    
    <string name="rotation_x">旋转度X</string>
    <string name="rotation_y">旋转度Y</string>
    <string name="rotation_z">旋转度Z</string>
    <string name="rotation_accuracy">精度:</string>
    <string name="rotation_name">名称:</string>
    <string name="rotation_company">厂商:</string>
    <string name="rotation_sample_rate">采样率:</string>
    <string name="rotation_version">版本:</string>
    <string name="rotation_power">功率:</string>
    <string name="rotation_max_range">最大范围:</string>
    <string name="rotation_resolution">分辨率:</string>
    
    <string name="orientation_x">方向X</string>
    <string name="orientation_y">方向Y</string>
    <string name="orientation_z">方向Z</string>
    <string name="orientation_accuracy">精度:</string>
    <string name="orientation_name">名称:</string>
    <string name="orientation_company">厂商:</string>
    <string name="orientation_sample_rate">采样率:</string>
    <string name="orientation_version">版本:</string>
    <string name="orientation_power">功率:</string>
    <string name="orientation_max_range">最大范围:</string>
    <string name="orientation_resolution">分辨率:</string>
    
    <string name="speed_acc_x">加速方向X:</string>
    <string name="speed_acc_y">加速方向Y:</string>
    <string name="speed_acc_z">加速方向Z:</string>
    <string name="speed_acc_accuracy">精度:</string>
    <string name="speed_acc_name">名称:</string>
    <string name="speed_acc_company">厂商:</string>
    <string name="speed_acc_sample_rate">采样率:</string>
    <string name="speed_acc_version">版本:</string>
    <string name="speed_acc_power">功率:</string>
    <string name="speed_acc_max_range">最大范围:</string>
    <string name="speed_acc_resolution">分辨率:</string>
    
    <string name="linear_acc_x">加速方向X:</string>
    <string name="linear_acc_y">加速方向Y:</string>
    <string name="linear_acc_z">加速方向Z:</string>
    <string name="linear_acc_accuracy">精度:</string>
    <string name="linear_acc_name">名称:</string>
    <string name="linear_acc_company">厂商:</string>
    <string name="linear_acc_sample_rate">采样率:</string>
    <string name="linear_acc_version">版本:</string>
    <string name="linear_acc_power">功率:</string>
    <string name="linear_acc_max_range">最大范围:</string>
    <string name="linear_acc_resolution">分辨率:</string>
    
    <string name="proximity_value">距离:</string>
    <string name="proximity_accuracy">精度:</string>
    <string name="proximity_name">名称:</string>
    <string name="proximity_company">厂商:</string>
    <string name="proximity_sample_rate">采样率:</string>
    <string name="proximity_version">版本:</string>
    <string name="proximity_power">功率:</string>
    <string name="proximity_max_range">最大范围:</string>
    <string name="proximity_resolution">分辨率:</string>
    
    <string name="temperature_value">摄氏度:</string>
    <string name="temperature_accuracy">精度:</string>
    <string name="temperature_name">名称:</string>
    <string name="temperature_company">厂商:</string>
    <string name="temperature_sample_rate">采样率:</string>
    <string name="temperature_version">版本:</string>
    <string name="temperature_power">功率:</string>
    <string name="temperature_max_range">最大范围:</string>
    <string name="temperature_resolution">分辨率:</string>
    
     <string name="humidity_value">湿度百分比</string>
    <string name="humidity_accuracy">精度</string>
    <string name="humidity_name">名称</string>
    <string name="humidity_company">厂商</string>
    <string name="humidity_sample_rate">采样率</string>
    <string name="humidity_version">版本</string>
    <string name="humidity_power">功率</string>
    <string name="humidity_max_range">最大范围</string>
    <string name="humidity_resolution">分辨率:</string>
    
    <string name="light_sensor_name">名称:</string>
    <string name="light_sensor_strength">光线强度:</string>
    <string name="light_sensor_company">厂商:</string>
    <string name="light_sensor_version">版本:</string>
    <string name="light_sensor_power">功率:</string>
    <string name="light_sensor_max_range">最大范围:</string>
    <string name="light_sensor_resolution">分辨率:</string>
   
    <string name="text_altavoz_inner">点击播放声音</string>
    <string name="altavoz_sys_volume">系统音量</string>
    <string name="altavoz_conversation_volume">通话音量</string>
    <string name="altavoz_ring_volume">铃声音量</string>
    <string name="altavoz_notification_volume">通知音量</string>
    <string name="altavoz_music_volume">音乐音量</string>
    <string name="altavoz_alarm_volume">报警器音量</string>
    <string name="altavoz_dtmf_volume">双音多频音量</string>
    <string name="altavoz_multimedia_chip">多媒体芯片</string>
    <string name="altavoz_alsa_version">ALSA版本</string>
    <string name="altavoz_mode">模式</string>
    <string name="altavoz_ringing_mode">响铃模式</string>
    <string name="altavoz_bluetooth_a2dp">蓝牙音频传输</string>
    <string name="altavoz_bluetooth_line_control">蓝牙线控链路</string>
    <string name="altavoz_bluetooth_sco">蓝牙同步链路</string>
    <string name="altavoz_mcriophone_quiet">话筒静音</string>
    <string name="altavoz_music_active">音乐活动</string>
    <string name="altavoz_speakphone">电话免提</string>
    <string name="altavoz_earphone">耳机</string>
    
    
    <string name="gsm_mobile_type">移动终端的类型:</string>
    <string name="gsm_telephone_number">手机号码:</string>
    <string name="gsm_imei">设备标识(IMEI):</string>
    <string name="gsm_imsi">用户标识（IMSI):</string>
    <string name="gsm_sim_country">SIM卡国别:</string>
    <string name="gsm_sim_serial_number">SIM卡序列号:</string>
    <string name="gsm_sim_state">SIM卡状态:</string>
    <string name="gsm_software_version">软件版本:</string>
    <string name="gsm_network_operator_number">网络运营商代号:</string>
    <string name="gsm_network_operator_name">网络运营商名称:</string>
    <string name="gsm_telephone_type">手机制式:</string>
    <string name="gsm_location">设备当前位置:</string>
    <string name="gsm_roame_state">漫游状态:</string>
    <string name="gsm_email_number">邮件号码:</string>
    <string name="gsm_email_type">信箱标识:</string>
    <string name="gsm_neighbor_number">邻居小区号:</string>
    <string name="gsm_locate_area_number">位置区域码:</string>
    <string name="gsm_area_network_type">区域网络类型:</string>
    <string name="gsm_area_strength">区信号强度:</string>
    <string name="gsm_area_scramble">扰频:</string>
    <string name="gsm_active_data">活动数据:</string>
    <string name="gsm_data_state">数据状态:</string>
    <string name="gsm_call_state">呼叫状态:</string>
    
    <string name="android_build_manufacturer">制造商:</string>
    <string name="android_build_model">型号:</string>
    <string name="android_build_product">产品:</string>
    <string name="android_build_version_release">发布版本:</string>
    <string name="android_build_version_sdk">SDK版本:</string>
    <string name="android_build_board">主板:</string>
    <string name="android_build_bootloader">启动加载程序:</string>
    <string name="android_build_brand">品牌:</string>
    <string name="android_build_cpu_abi">指令集1:</string>
    <string name="android_build_cpu_abi2">指令集2:</string>
    <string name="android_build_device">设备:</string>
    <string name="android_build_display">显示:</string>
    <string name="android_build_fingerprint">指纹:</string>
    <string name="android_build_hardware">硬件:</string>
    <string name="android_build_host">主机:</string>
    <string name="android_build_id">编号:</string>
    <string name="android_build_radio">收音机:</string>
    <string name="android_build_tags">标签:</string>
    <string name="android_build_time">时间:</string>
    <string name="android_build_type">类型:</string>
    <string name="android_build_user">用户名:</string>
    <string name="android_build_serial">序列号:</string>
    <string name="android_build_version_codename">代号:</string>
    
    <string name="microphone_prompt">请对话筒讲话进行测试</string>
    <string name="microphone_voice_format">音频格式:</string>
    <string name="microphone_voice_source">音频来源:</string>
    <string name="microphone_voice_channel_config">声道配置:</string>
    <string name="microphone_voice_channel_count">声道数量:</string>
    <string name="microphone_voice_min_buffer_size">最小缓冲:</string>
    <string name="microphone_voice_sample_rate">采样率:</string>
    <string name="microphone_voice_state">当前状态:</string>
    
    <string name="pressure_value">压力值:</string>
	<string name="pressure_accuracy">精度:</string>
    <string name="pressure_name">名称:</string>
    <string name="pressure_company">厂商:</string>
    <string name="pressure_sample_rate">采样率:</string>
    <string name="pressure_version">版本:</string>
    <string name="pressure_power">功率:</string>
    <string name="pressure_max_range">最大范围:</string>
    <string name="pressure_resolution">分辨率:</string>
    
    <string name="nfc_support_promt">提示</string>
</resources>